# Graphics-sandbox

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json
examples/: base_textures.cpp  base_window.cpp  blend_fragmentshader.cpp  dvd_screensaver.cpp  matrix_transformations.cpp  mult_textures.cpp  triangle.cpp  vertexshader_move_fragshader_blend.cpp
lib/engine/: CMakeLists.txt
lib/engine/include/tea/: application.hpp  engine_error.hpp  logging.hpp  types.hpp  window.hpp
lib/engine/include/tea/input/: input.hpp  key_code.hpp
lib/engine/include/tea/renderer/: shader.hpp  texture.hpp  window.hpp
lib/engine/src/: application.cpp  input.cpp  logging.cpp  window.cpp
lib/engine/src/input/: input.cpp
lib/engine/src/renderer/: shader.cpp  texture.cpp  window.cpp
lib/glad/: README.md
lib/glad/include/glad/: gl.h
lib/glad/src/: gl.c
shaders/: dvd_screensaver.frag.glsl  dvd_screensaver.vert.glsl  textures.frag.glsl  textures.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
src/: error.hpp  main.cpp  playground_app.cpp  playground_app.hpp
src/engine/: application.cpp  application.hpp  error.hpp  types.hpp  window.cpp  window.hpp
src/engine/renderer/: shader.cpp  shader.hpp
src/programs/: dvd_screensaver.cpp  dvd_screensaver.hpp  program.hpp  textures.cpp  textures.hpp  triangle.cpp  triangle.hpp
